kubernetes_deployment/base/esgame/esgame-calculation-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esgame-calculation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esgame-calculation
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: esgame-calculation
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: esgame-calculation-pvc
      containers:
      - env:
        - name: GEOSERVER
          value: <your geoserver ingress>/geoserver
        image: <your container registry>/esgame-calculation
        imagePullPolicy: Always
        name: esgame-calculation
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
          - mountPath: /app/data
            name: app-data
