kubernetes_deployment/base/esgame/esgame-angular-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgame-angular-service
spec:
  ports:
  - port: 81
    protocol: TCP
    targetPort: 80
  selector:
    app: esgame-angular
  type: ClusterIP
