kubernetes_deployment/base/esgame/esgame-calculation-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgame-calculation-service
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: esgame-calculation
  type: ClusterIP
